--- a/type-lists/model.yaml
+++ b/type-lists/model.yaml
@@ -161,6 +161,15 @@
     - model/vnd.parasolid.transmit-text
   registered: true
 - !ruby/object:MIME::Type
+  content-type: model/vnd.rosette.annotated-data-model
+  encoding: base64
+  xrefs: !ruby/hash:MIME::Types::Container
+    person:
+    - Benson_Margulies
+    template:
+    - model/vnd.rosette.annotated-data-model
+  registered: true
+- !ruby/object:MIME::Type
   content-type: model/vnd.valve.source.compiled-map
   encoding: base64
   xrefs: !ruby/hash:MIME::Types::Container
