--- a/type-lists/application.yaml
+++ b/type-lists/application.yaml
@@ -842,11 +842,21 @@
     - application/EDIFACT
   registered: true
 - !ruby/object:MIME::Type
+  content-type: application/efi
+  encoding: base64
+  xrefs: !ruby/hash:MIME::Types::Container
+    person:
+    - Samer_El-Haj-Mahmoud
+    - UEFI_Forum
+    template:
+    - application/efi
+  registered: true
+- !ruby/object:MIME::Type
   content-type: application/EmergencyCallData.Comment+xml
   encoding: base64
   xrefs: !ruby/hash:MIME::Types::Container
     draft:
-    - RFC-ietf-ecrit-additional-data-37
+    - RFC-ietf-ecrit-additional-data-38
     template:
     - application/EmergencyCallData.Comment+xml
   registered: true
@@ -855,7 +865,7 @@
   encoding: base64
   xrefs: !ruby/hash:MIME::Types::Container
     draft:
-    - RFC-ietf-ecrit-additional-data-37
+    - RFC-ietf-ecrit-additional-data-38
     template:
     - application/EmergencyCallData.DeviceInfo+xml
   registered: true
@@ -864,7 +874,7 @@
   encoding: base64
   xrefs: !ruby/hash:MIME::Types::Container
     draft:
-    - RFC-ietf-ecrit-additional-data-37
+    - RFC-ietf-ecrit-additional-data-38
     template:
     - application/EmergencyCallData.ProviderInfo+xml
   registered: true
@@ -873,7 +883,7 @@
   encoding: base64
   xrefs: !ruby/hash:MIME::Types::Container
     draft:
-    - RFC-ietf-ecrit-additional-data-37
+    - RFC-ietf-ecrit-additional-data-38
     template:
     - application/EmergencyCallData.ServiceInfo+xml
   registered: true
@@ -882,7 +892,7 @@
   encoding: base64
   xrefs: !ruby/hash:MIME::Types::Container
     draft:
-    - RFC-ietf-ecrit-additional-data-37
+    - RFC-ietf-ecrit-additional-data-38
     template:
     - application/EmergencyCallData.SubscriberInfo+xml
   registered: true
@@ -2147,6 +2157,7 @@
   - class
   - ani
   - pgp
+  - gpg
   - so
   - dll
   - dylib
@@ -2213,6 +2224,7 @@
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc5334
+    - rfc7845
     template:
     - application/ogg
   registered: true
@@ -2303,6 +2315,7 @@
   encoding: 7bit
   extensions:
   - pgp
+  - gpg
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc3156
@@ -2552,8 +2565,8 @@
   content-type: application/problem+json
   encoding: base64
   xrefs: !ruby/hash:MIME::Types::Container
-    draft:
-    - RFC-ietf-appsawg-http-problem-03
+    rfc:
+    - rfc7807
     template:
     - application/problem+json
   registered: true
@@ -2561,8 +2574,8 @@
   content-type: application/problem+xml
   encoding: base64
   xrefs: !ruby/hash:MIME::Types::Container
-    draft:
-    - RFC-ietf-appsawg-http-problem-03
+    rfc:
+    - rfc7807
     template:
     - application/problem+xml
   registered: true
@@ -3725,6 +3738,15 @@
     - application/vnd.3gpp.sms
   registered: true
 - !ruby/object:MIME::Type
+  content-type: application/vnd.3gpp.sms+xml
+  encoding: base64
+  xrefs: !ruby/hash:MIME::Types::Container
+    person:
+    - Frederic_Firmin
+    template:
+    - application/vnd.3gpp.sms+xml
+  registered: true
+- !ruby/object:MIME::Type
   content-type: application/vnd.3gpp.srvcc-ext+xml
   encoding: base64
   xrefs: !ruby/hash:MIME::Types::Container
@@ -3791,6 +3813,15 @@
     - AC_Mahendran
     template:
     - application/vnd.3gpp2.tcap
+  registered: true
+- !ruby/object:MIME::Type
+  content-type: application/vnd.3lightssoftware.imagescal
+  encoding: base64
+  xrefs: !ruby/hash:MIME::Types::Container
+    person:
+    - Gus_Asadi
+    template:
+    - application/vnd.3lightssoftware.imagescal
   registered: true
 - !ruby/object:MIME::Type
   content-type: application/vnd.3M.Post-it-Notes
@@ -4569,6 +4600,15 @@
     - Frank_Patz
     template:
     - application/vnd.contact.cmsg
+  registered: true
+- !ruby/object:MIME::Type
+  content-type: application/vnd.coreos.ignition+json
+  encoding: base64
+  xrefs: !ruby/hash:MIME::Types::Container
+    person:
+    - Alex_Crawford
+    template:
+    - application/vnd.coreos.ignition+json
   registered: true
 - !ruby/object:MIME::Type
   content-type: application/vnd.cosmocaller
@@ -9519,6 +9559,16 @@
     - application/vnd.oma.group-usage-list+xml
   registered: true
 - !ruby/object:MIME::Type
+  content-type: application/vnd.oma.lwm2m+json
+  encoding: base64
+  xrefs: !ruby/hash:MIME::Types::Container
+    person:
+    - John_Mudge
+    - OMNA-Open_Mobile_Naming_Authority
+    template:
+    - application/vnd.oma.lwm2m+json
+  registered: true
+- !ruby/object:MIME::Type
   content-type: application/vnd.oma.pal+xml
   encoding: base64
   xrefs: !ruby/hash:MIME::Types::Container
@@ -9639,6 +9689,15 @@
     - Julien_Grange
     template:
     - application/vnd.omaloc-supl-init
+  registered: true
+- !ruby/object:MIME::Type
+  content-type: application/vnd.onepager
+  encoding: base64
+  xrefs: !ruby/hash:MIME::Types::Container
+    person:
+    - Nathan_Black
+    template:
+    - application/vnd.onepager
   registered: true
 - !ruby/object:MIME::Type
   content-type: application/vnd.openblox.game+xml
@@ -10759,6 +10818,15 @@
     - Glenn_Forrester
     template:
     - application/vnd.qualcomm.brew-app-res
+  registered: true
+- !ruby/object:MIME::Type
+  content-type: application/vnd.quarantainenet
+  encoding: base64
+  xrefs: !ruby/hash:MIME::Types::Container
+    person:
+    - Casper_Joost_Eyckelhof
+    template:
+    - application/vnd.quarantainenet
   registered: true
 - !ruby/object:MIME::Type
   content-type: application/vnd.Quark.QuarkXPress
@@ -12143,6 +12211,15 @@
     - Lyndsey_Ferguson
     template:
     - application/vnd.vectorworks
+  registered: true
+- !ruby/object:MIME::Type
+  content-type: application/vnd.vel+json
+  encoding: base64
+  xrefs: !ruby/hash:MIME::Types::Container
+    person:
+    - James_Wigger
+    template:
+    - application/vnd.vel+json
   registered: true
 - !ruby/object:MIME::Type
   content-type: application/vnd.verimatrix.vcas
