--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,56 +19,47 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - ubuntu
-          - macos
-          - windows
+          - macos-latest
+          - ubuntu-20.04
         ruby:
-          - '2.4'
-          - '2.5'
           - '2.6'
           - '2.7'
           - '3.0'
           - '3.1'
           - '3.2'
           - head
-          - debug
-          - mingw
-          - mswin
           - jruby
           - jruby-head
           - truffleruby
           - truffleruby-head
-        exclude:
-          - os: macos
+          - truffleruby+graalvm
+          - truffleruby+graalvm-head
+        include:
+          - ruby: head
+            continue-on-error: true
+          - ruby: jruby-head
+            continue-on-error: true
+          - os: windows-latest
             ruby: mingw
-          - os: macos
+          - os: windows-latest
             ruby: mswin
-          - os: ubuntu
-            ruby: mingw
-          - os: ubuntu
-            ruby: mswin
-          - os: windows
-            ruby: debug
-          - os: windows
+          - os: windows-latest
             ruby: jruby
-          - os: windows
-            ruby: jruby-head
-          - os: windows
-            ruby: truffleruby
-          - os: windows
-            ruby: truffleruby-head
-    runs-on: ${{ matrix.os }}-latest
-    continue-on-error: ${{
-      endsWith(matrix.ruby, 'head') ||
-      matrix.ruby == 'debug' ||
-      (startsWith(matrix.ruby, 'jruby') && matrix.os == 'windows')
-      }}
+            continue-on-error: true
+          - os: ubuntu-22.04
+            ruby: head
+          - os: ubuntu-22.04
+            ruby: '3.1'
+          - os: ubuntu-22.04
+            ruby: '3.2'
+    runs-on: ${{ matrix.os }}
+    continue-on-error: ${{ matrix.continue-on-error || false }}
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
+      - uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
-          bundler-cache: true # 'bundle install' and cache
-      - name: Run tests
-        run: bundle exec ruby -S rake test --trace
+          rubygems: ${{ matrix.rubygems || 'latest' }}
+          bundler: 2
+          bundler-cache: true
+      - run: bundle exec ruby -S rake test --trace
