--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will download a prebuilt Ruby version, install dependencies and run tests with Rake
-# For more information see: https://github.com/marketplace/actions/setup-ruby-jruby-and-truffleruby
-
 name: CI
 
 on:
@@ -63,3 +56,5 @@ jobs:
           bundler: 2
           bundler-cache: true
       - run: bundle exec ruby -S rake test --trace
+      - if: matrix.os == 'ubuntu-22.04' && matrix.ruby == '3.2'
+        run: bundle exec standardrb
