--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,13 @@
-*.swp
-*~
+*.gem
+.byebug_history
 .rake_tasks~
 .source_index
-.vagrant
 Gemfile.lock
-Vagrantfile
-coverage
-doc
-html
-pkg
-publish
+coverage.info
+coverage/
+doc/
+html/
+pkg/
+publish/
 test/cache.tst
 tmp/
-.byebug_history
-tags
